--- a/aceGame/style.css
+++ b/aceGame/style.css
@@ -115,8 +115,8 @@ input, select {
 
 img{
     display block;
-    margin-left: 50px;
-    margin-right: 55px;
+    margin-left: 0px;
+    margin-right: 5px;
     margin-top: 80px;
     max-width: 100%;
     max-height: 100%;
@@ -151,32 +151,132 @@ img{
     color: #444444;
     font-size: 9pt;
     background-color: #fafafa00;
+    background-color: rgb(0, 0, 0);
     
 }
 
+.contentaxe{
+    display: grid;
+    grid-template-columns: 20% 10% 5% 30% 7% 10% 18%;
+    grid-template-rows: 10% 80% 10%;
+    max-width: 1920px;
+    max-height: 1080px;
+    margin: 0 auto;
+    
+}
+
+
+
+.contentaxe div{
+    background-color: rgb(72, 61, 107);
+    
+}
+
+
+.contentaxe div:nth-child(even) {
+
+   background-color:rgb(0, 0, 0);
+}
+.contentaxe div:nth-child(odd) {
+
+   background-color:rgb(0, 0, 0);
+}
+
+.contentaxe2{
+    display: grid;
+    grid-template-columns: 20% 10% 5% 30% 7% 10% 18%;
+    grid-template-rows: 20% 80% 10% 200px;
+    max-width: 1920px;
+    max-height: 1080px;
+    margin: 0 auto;
+    
+}
+
+
+
+.contentaxe2 div{
+    background-color: rgb(72, 61, 107);
+    
+}
+
+
+.contentaxe2 div:nth-child(even) {
+
+   background-color:rgb(0, 0, 0);
+}
+.contentaxe2 div:nth-child(odd) {
+
+   background-color:rgb(0, 0, 0);
+}
+
+.splitbase{
+    float: left;
+    display: grid;
+    grid-template-rows: 30% 40% 30%;
+    
+}
+
+.splitbase div{
+    background-color: rgb(0, 0, 0);
+    
+}
+
+
+.splitbase div:nth-child(even) {
+
+   background-color:rgb(0, 0, 0);
+}
+.splitbase div:nth-child(odd) {
+
+   background-color:rgb(0, 0, 0);
+}
+
+.splitbase2{
+    float: left;
+    display: grid;
+    grid-template-rows: 30% 50% 20%;
+    
+}
+
+.splitbase2 div{
+    background-color: rgb(0, 0, 0);
+    
+}
+
+
+.splitbase2 div:nth-child(even) {
+
+   background-color:rgb(0, 0, 0);
+}
+.splitbase2 div:nth-child(odd) {
+
+   background-color:rgb(0, 0, 0);
+}
 .content{
     display: grid;
-    grid-template-columns: 15% 10% 25% 25% 20% 5% ;
-    grid-template-rows: 216px 448px 296px ;
-    max-width: 960;
+    grid-template-columns: 20% 10% 5% 15% 15% 7% 10% 13%;
+    grid-template-rows: 10% 40% 40% 10% 300px;
+    max-width: 1920px;
+    max-height: 1080px;
     margin: 0 auto;
+    background-color: rgb(0, 0, 0);
 }
 
 
 
 .content div{
     background-color: rgb(72, 61, 107);
-    margin: 2px;
+    
 }
 
 
 .content div:nth-child(even) {
 
-   background-color:rgba(255, 255, 255, 0);
+   background-color:rgb(0, 0, 0);
 }
 .content div:nth-child(odd) {
 
-   background-color:rgba(255, 255, 255, 0);
+   background-color:rgb(0, 0, 0);
 }
 
 /* this is for the balloon and target style */
@@ -193,17 +293,17 @@ img{
 
 .throwballoon div{
     background-color: rgb(72, 61, 107);
-    margin: 2px;
+    margin: 0px;
 }
 
 
 .throwballoon div:nth-child(even) {
 
-   background-color:rgba(255, 255, 255, 0);
+   background-color:rgb(0, 0, 0);
 }
 .throwballoon div:nth-child(odd) {
 
-   background-color:rgba(255, 255, 255, 0);
+   background-color:rgb(0, 0, 0);
 }
 
 
@@ -219,24 +319,24 @@ img{
 
 .throwballoon2 div{
     background-color: rgb(72, 61, 107);
-    margin: 2px;
+    margin: 0px;
 }
 
 
 .throwballoon2 div:nth-child(even) {
 
-   background-color:rgba(255, 255, 255, 0);
+   background-color:rgb(0, 0, 0);
 }
 .throwballoon2 div:nth-child(odd) {
 
-   background-color:rgba(255, 255, 255, 0);
+   background-color:rgb(0, 0, 0);
 }
 
 .thetimer{
     
     width: 10px;
     height: 130px;
-    margin-top: 60px;
+    margin-top: 150px;
     white-space:nowrap;
     text-overflow:ellipsis;
     
@@ -246,9 +346,9 @@ img{
     -o-transform: rotate(-90deg); /* Opera */
     -ms-transform: rotate(-90deg); /* IE 9 */
     font-family: Helvetica, Sans-Serif;
-    color: #000000;
+    color: #ffffff;
     font-size: 40pt;
-    background-color: #ffffff;
+    background-color: #000000;
     
 }
 
