--- a/aceGame/style.css
+++ b/aceGame/style.css
@@ -185,17 +185,19 @@ img{
 .contentaxe2{
     display: grid;
     grid-template-columns: 20% 10% 5% 30% 7% 10% 18%;
-    grid-template-rows: 20% 80% 10% 200px;
+    grid-template-rows: 20% 80% 10% 500px;
     max-width: 1920px;
     max-height: 1080px;
     margin: 0 auto;
+    background-color: rgb(3, 3, 3);
+    
     
 }
 
 
 
 .contentaxe2 div{
-    background-color: rgb(72, 61, 107);
+    background-color: rgb(0, 0, 0);
     
 }
 
@@ -210,7 +212,7 @@ img{
 }
 
 .splitbase{
-    float: left;
+    
     display: grid;
     grid-template-rows: 30% 40% 30%;
     
@@ -255,10 +257,10 @@ img{
 .content{
     display: grid;
     grid-template-columns: 20% 10% 5% 15% 15% 7% 10% 13%;
-    grid-template-rows: 10% 40% 40% 10% 300px;
+    grid-template-rows: 10% 40% 40% 10% 400px;
     max-width: 1920px;
     max-height: 1080px;
-    margin: 0 auto;
+    margin: auto;
     background-color: rgb(0, 0, 0);
 }
 
